k8s/prod/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nano-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nano-app
  template:
    metadata:
      labels:
        app: nano-app
    spec:
      containers:
        - name: nano-app
          image: nano-stack-app:2.0
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
