k8s/prod/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nano-app
spec:
  ingressClassName: nginx
  rules:
    - host: prod.nano.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nano-app
                port:
                  number: 5000
